--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,17 @@ on:
 jobs:
   check-configuration:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        host: [tohu, hyperv]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v27
+        uses: cachix/install-nix-action@v31
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: VM Test tohu configuration
-        run: nix run github:nix-community/nixos-anywhere -- --flake .#tohu --vm-test
-
-      - name: VM Test hyperv configuration
-        run: nix run github:nix-community/nixos-anywhere -- --flake .#hyperv --vm-test
+      - name: VM Test ${{ matrix.host }} configuration
+        run: nix run github:nix-community/nixos-anywhere -- --flake .#${{ matrix.host }} --vm-test
