--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,31 +15,19 @@ jobs:
       matrix:
         host: [tohu, hyperv]
     steps:
-      - name: Maximize Build Space
-        uses: easimon/maximize-build-space@master
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
         with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
 
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Mount Nix Store
-        run: |
-          sudo mkdir -p /mnt/nix
-          sudo chown -R $USER:$(id -gn $USER) /mnt/nix
-          sudo mkdir -p /nix
-          sudo mount --bind /mnt/nix /nix
-          sudo chown -R $USER:$(id -gn $USER) /nix
-          echo "Mounted /mnt/nix to /nix"
-
-      - name: Fix Git Permissions
-        run: |
-           git config --global --add safe.directory /home/runner/work/nixos-config/nixos-config
 
       - name: Install Nix
         uses: cachix/install-nix-action@v31
