Add GitHub Actions for managing flake.lock updates and release string replacement
- Introduced `replace-release-string` action to modify pre-release strings in flake files.
- Added `update-flake-lock` action to streamline the updating of all flake.lock files.
- Updated CI workflows to utilize these new actions for better maintainability and clarity.
- Created a new workflow to sync changes from the no-lock-update branch to pre-release.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,26 +38,15 @@ jobs:
 
       # 更新所有子 flake 和根目录的 lock 文件
       - name: Update all flake.lock files
-        run: |
-          nix flake update --flake ./core
-          nix flake update --flake ./extra/kernel/cachyos
-          nix flake update --flake ./extra/kernel/cachyos-unstable
-          nix flake update --flake .
-          nix flake update --flake ./vps/hyperv
-          nix flake update --flake ./vps/tohu
+        id: update-locks
+        uses: ./.github/actions/update-flake-lock
 
       # 上传更新后的 lock 文件作为 artifact
       - name: Upload updated flake.lock files
         uses: actions/upload-artifact@v4
         with:
           name: flake-locks
-          path: |
-            flake.lock
-            core/flake.lock
-            extra/kernel/cachyos/flake.lock
-            extra/kernel/cachyos-unstable/flake.lock
-            vps/hyperv/flake.lock
-            vps/tohu/flake.lock
+          path: ${{ steps.update-locks.outputs.lock-file-paths }}
           retention-days: 1
 
   # ============================================================
